# iagent-autopilot

./: .env.example  .gitignore  DEPLOY.md  LICENSE  PROJECT_AUDIT.md  README.md  docker-compose.yml  injectivekeystore.json  render.yaml
dashboard/: .env.local.example  COMPONENTS.md  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/components/: AgentGrid.tsx  AuditStream.tsx  DecisionCard.tsx  DecisionFeed.tsx  DemoControls.tsx  EventTicker.tsx  KillSwitch.tsx  (+5 more)
dashboard/components/: Logo.tsx  ProofOfExecution.tsx  providers.tsx
dashboard/hooks/: use-sentinel-ws.ts
dashboard/lib/: api.ts  brand-content.ts  component-registry.ts  explorer.ts  mcp-capabilities.ts  proof-of-execution.ts  runtime-bootstrap.ts  sentinel-store.ts  types.ts
runtime/: .env.example  Dockerfile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
runtime/sentinel/: __init__.py  bus.py  config.py  errors.py  main.py  mcp_client.py  middleware.py  readiness.py  schemas.py  security.py  simulator.py  store.py  websocket_hub.py
runtime/sentinel/agents/: __init__.py  analyst.py  auditor.py  executor.py  resilience.py  risk.py  watcher.py
runtime/sentinel/llm/: anthropic_client.py  groq_client.py
runtime/tests/: base.py  test_agents_hardening.py  test_api.py  test_demo_force_open.py  test_e2e_testnet.py  test_executor_demo_real_tx.py  test_main_hardening.py  test_mcp_client.py  test_security.py  test_simulator.py  test_store_migration.py
runtime/tests/fixtures/: fake_mcp_server.mjs
(+28 files in other folders)
